Rudementary Dashboard created with buggy side-nav collapse

--- a/Code_Base/src/app/Views/dashboard_components/weights/weights.component.html
+++ b/Code_Base/src/app/Views/dashboard_components/weights/weights.component.html
@@ -1,5 +1,5 @@
-<h1>Your Goals</h1>
-<h3> Current Goals</h3>
+<h1>Your Weight Log</h1>
+<h3> Current Log</h3>
 <table border='1' width='100%' style='border-collapse: collapse;'>
     <tr>
       <th>Diary ID</th>
