--- a/Code_Base/src/app/Views/dashboard_components/dashboard/dashboard.component.html
+++ b/Code_Base/src/app/Views/dashboard_components/dashboard/dashboard.component.html
@@ -1,7 +1,34 @@
-<p>dashboard works!</p>
-<ul>
-    <li ><a class="nav-link" routerLink="./weights">Weight Diary</a></li>
-    <li ><a class="nav-link" routerLink="./goals">Goals</a></li>
-</ul>
+<div class="row">
+    <div class="container-fluid">
+        <div class="row d-flex d-md-block flex-nowrap wrapper">
+            <div class="col-md-3 float-left col-1 pl-0 pr-0 collapse width show" id="sidebar">
+                <div class="list-group border-0 text-center text-md-left">
+                    <a href="#menu1" class="list-group-item d-inline-block collapsed" data-toggle="collapse" aria-expanded="false"><i class="fa fa-dashboard"></i> <span class="d-none d-md-inline">Dashboard</span> </a>
+                    <div class="collapse" id="menu1" data-parent="#sidebar">
+                        <a routerLink="./" class="list-group-item" > Dashboard Home </a>
+                        
+                        <a routerLink="./weights" class="list-group-item" >Weight Log</a>
+                        
+                        <a routerLink="./goals" class="list-group-item">Goal Log</a>
+                    </div>
 
-<router-outlet></router-outlet>
+                    <a href="#" class="list-group-item d-inline-block collapsed"><i class="fa fa-film"></i> <span class="d-none d-md-inline">Item 2</span></a>
+                    <a href="#menu3" class="list-group-item d-inline-block collapsed" data-toggle="collapse" aria-expanded="false"><i class="fa fa-book"></i> <span class="d-none d-md-inline">Item 3 </span></a>
+                    <div class="collapse" id="menu3" data-parent="#sidebar">
+                        <a href="#" class="list-group-item" data-parent="#menu3">3.1</a>
+
+                        <a href="#menu3sub2" class="list-group-item" data-toggle="collapse" aria-expanded="false">3.2 </a>
+                        
+                        <a href="#" class="list-group-item" data-parent="#menu3">3.3</a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row col-md-9">
+                
+                    <a href="#" data-target="#sidebar" data-toggle="collapse"><i class="text-dark fa fa-navicon fa-lg py-2 p-1">   >></i></a>
+                    <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+</div>
