--- a/Code_Base/src/app/Views/header/header.component.html
+++ b/Code_Base/src/app/Views/header/header.component.html
@@ -19,11 +19,11 @@
             </ul>
 
             <a class="navbar-brand nav-link float-left" style="margin:0px;" routerLink="/dashboard">
-                <p style="margin:0px;"><i class="fa fa-user" aria-hidden="true"><img src="./assets/ui/user.png" aria-hidden="true" style="width:30px; height:30px; padding:0px; margin:0px;" alt="Profile"></i></p>
+                <p style="margin:0px;"><i class="fa fa-user fa-lg" aria-hidden="true"></i></p>
             </a>
             <nav *ngIf="isLoggedIn()">
                 <a class="navbar-brand nav-link float-left" style="margin:0px;" routerLink="/logout" >
-                    <p style="margin:0px;"><i class="fa fa-user" aria-hidden="true"><img src="./assets/ui/logout.png" aria-hidden="true" style="width:30px; height:30px; padding:0px; margin:0px;" alt="Logout"></i></p>
+                    <p style="margin:0px;"><i class="fa fa-door-open fa-lg" aria-hidden="true"></i></p>
                 </a> 
             </nav>     
         </div>
