--- a/Code_Base/src/app/Views/register/register.component.html
+++ b/Code_Base/src/app/Views/register/register.component.html
@@ -1,3 +1,6 @@
+<app-header></app-header>
+
+
 <h1>Register</h1>
 <form [formGroup] = "registrationForm" (ngSubmit)="registerNewUser()">
     <table>
