--- a/Code_Base/src/app/Views/home/home.component.html
+++ b/Code_Base/src/app/Views/home/home.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="7500" >
     <div class="carousel-inner">
       <div class="carousel-item active">
